# zed-csharp-api

./: README.md
Documentation/: index.html
Documentation/api/: index.html  sl.AREA_EXPORT_STATE.html  sl.BarometerData.html  sl.CAMERA_SETTINGS.html  sl.COORDINATE_SYSTEM.html  sl.COPY_TYPE.html  sl.CalibrationParameters.html  sl.CameraParameters.html  sl.Constant.html  sl.DEPTH_MODE.html  sl.ERROR_CODE.html  sl.FILTER.html  sl.INPUT_TYPE.html  sl.ImuData.html  sl.InitParameters.html  sl.MAT_TYPE.html  sl.MEASURE.html  sl.MEM.html  sl.MESH_FILE_FORMAT.html  sl.MODEL.html  sl.MagnetometerData.html  sl.Matrix3x3.html  sl.OBJECT_CLASS.html  sl.OBJECT_TRACK_STATE.html  sl.ObjectDataSDK.html  sl.ObjectsFrameSDK.html  sl.Pose.html  sl.REFERENCE_FRAME.html  sl.RESOLUTION_1.html  sl.Recording_state.html  sl.Resolution.html  sl.RuntimeParameters.html  sl.SENSING_MODE.html  sl.SPATIAL_MAPPING_STATE.html  sl.STREAMING_CODEC.html  sl.SVO_COMPRESSION_MODE.html  sl.SensorsData.html  sl.TIME_REFERENCE.html  sl.TRACKING_FRAME.html  sl.TRACKING_STATE.html  (+24 more)
Documentation/html/: annotated.html  annotated.js  annotated_dup.js  classes.html  classsl_1_1Camera-members.html  classsl_1_1Camera.html  classsl_1_1Camera.js  classsl_1_1Camera__coll__graph.dot  classsl_1_1FusedPointCloud-members.html  classsl_1_1FusedPointCloud.html  classsl_1_1FusedPointCloud.js  classsl_1_1FusedPointCloud__coll__graph.dot  classsl_1_1InitParameters-members.html  classsl_1_1InitParameters.html  classsl_1_1InitParameters.js  classsl_1_1InitParameters__coll__graph.dot  classsl_1_1Mat-members.html  classsl_1_1Mat.html  classsl_1_1Mat.js  classsl_1_1Mat__coll__graph.dot  classsl_1_1Mesh-members.html  classsl_1_1Mesh.html  classsl_1_1Mesh.js  classsl_1_1Mesh__coll__graph.dot  classsl_1_1PositionalTrackingParameters-members.html  classsl_1_1PositionalTrackingParameters.html  classsl_1_1PositionalTrackingParameters.js  classsl_1_1PositionalTrackingParameters__coll__graph.dot  classsl_1_1RuntimeParameters-members.html  classsl_1_1RuntimeParameters.html  classsl_1_1RuntimeParameters.js  classsl_1_1RuntimeParameters__coll__graph.dot  classsl_1_1SpatialMappingParameters-members.html  classsl_1_1SpatialMappingParameters.html  classsl_1_1SpatialMappingParameters.js  (+441 more)
Samples/: CMakeLists.txt
Samples/Tutorials/: CMakeLists.txt
Samples/Tutorials/tutorial 1 - hello ZED/: CMakeLists.txt
Samples/Tutorials/tutorial 2 - image capture/: App.xaml  CMakeLists.txt  Program.cs
Samples/Tutorials/tutorial 3 - depth sensing/: README.md
Samples/Tutorials/tutorial 4 - positional tracking/: CMakeLists.txt  README.md
Samples/Tutorials/tutorial 5 - spatial mapping/: CMakeLists.txt  README.md
Samples/Tutorials/tutorial 6 - object detection/: CMakeLists.txt  README.md
Samples/Tutorials/tutorial 7 - sensors data/: CMakeLists.txt
Samples/body tracking/: CMakeLists.txt
Samples/camera control/: CMakeLists.txt  Program.cs  README.md
Samples/depth sensing/: CMakeLists.txt
Samples/image capture/: CMakeLists.txt  MainWindow.xaml  README.md
Samples/object detection/birds eye viewer/: CMakeLists.txt
Samples/object detection/image viewer/: CMakeLists.txt
Samples/plane detection/: CMakeLists.txt  README.md
Samples/positional tracking/: CMakeLists.txt  GLViewer.cs  README.md
Samples/spatial mapping/: CMakeLists.txt
Samples/svo recording/export/: CMakeLists.txt  README.md
Samples/svo recording/playback/: CMakeLists.txt  README.md
Samples/svo recording/recording/: CMakeLists.txt  README.md
Stereolabs.zed/: CMakeLists.txt  Readme.md
Stereolabs.zed/net461/: CMakeLists.txt
Stereolabs.zed/net8.0/: CMakeLists.txt
Stereolabs.zed/src/: ZEDCamera.cs  ZEDCommon.cs  ZEDFusion.cs  ZEDMat.cs
Tutorials/: CMakeLists.txt
Tutorials/tutorial 1 - hello ZED/: CMakeLists.txt  Program.cs  README.md
Tutorials/tutorial 2 - image capture/: App.xaml.cs  CMakeLists.txt  MainWindow.xaml.cs  README.md
Tutorials/tutorial 3 - depth sensing/: CMakeLists.txt  Program.cs  README.md  packages.config
Tutorials/tutorial 4 - positional tracking/: CMakeLists.txt  Program.cs  README.md
Tutorials/tutorial 5 - sensors data/: CMakeLists.txt  Program.cs  README.md  packages.config
Tutorials/tutorial 6 - object detection/: CMakeLists.txt  Program.cs
Tutorials/tutorial 6 - object detection - image/: CMakeLists.txt  GLViewer.cs  MainWindow.cs  README.md  packages.config
Tutorials/tutorial 7 - body tracking/: CMakeLists.txt  GLViewer.cs  MainWindow.cs  Program.cs  README.md
Tutorials/tutorial 7 - object detection - birds eye/: CMakeLists.txt  GLViewer.cs  MainWindow.cs  README.md  packages.config
Tutorials/tutorial 8 - body tracking/: CMakeLists.txt  GLViewer.cs  MainWindow.cs  README.md
Tutorials/tutorial 9 - spatial mapping/: CMakeLists.txt  GLViewer.cs  MainWindow.cs  README.md  packages.config
(+136 files in other folders)
