cmake_minimum_required( VERSION 3.8.0 )

project(Samples CSharp)


add_subdirectory("positional tracking")
add_subdirectory("depth sensing")
add_subdirectory("object detection/image viewer")
add_subdirectory("object detection/birds eye viewer")
add_subdirectory("body tracking")
add_subdirectory("spatial mapping")
add_subdirectory("svo recording/playback")
add_subdirectory("svo recording/export")
add_subdirectory("svo recording/recording")
add_subdirectory("plane detection")
add_subdirectory("camera control")
add_subdirectory("image capture")
