cmake_minimum_required( VERSION 3.8.0 )

project(Tutorials CSharp)

add_subdirectory("tutorial 1 - hello ZED")
add_subdirectory("tutorial 2 - image capture")
add_subdirectory("tutorial 3 - depth sensing")
add_subdirectory("tutorial 4 - positional tracking")
add_subdirectory("tutorial 5 - sensors data")
add_subdirectory("tutorial 6 - object detection")